--- a/Literatur.bib
+++ b/Literatur.bib
@@ -437,6 +437,18 @@
   url    = {https://de.statista.com/themen/4253/internetkriminalitaet-in-oesterreich/},
 }
 
+@Book{it-sec-book,
+  author    = {Darren Death},
+  date      = {2017-12-01},
+  title     = {Information Security Handbook},
+  isbn      = {9781788478830},
+  pagetotal = {330},
+  publisher = {Packt Publishing},
+  url       = {https://www.ebook.de/de/product/31050345/darren_death_information_security_handbook.html},
+  ean       = {9781788478830},
+  year      = {2017},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
