--- a/Literatur.bib
+++ b/Literatur.bib
@@ -449,6 +449,26 @@
   year      = {2017},
 }
 
+@WWW{k8s-4cs,
+  author = {The Kubernetes Authors},
+  date   = {2022-02-25},
+  editor = {The Kubernetes Authors},
+  title  = {Overview of Cloud Native Security},
+  url    = {https://kubernetes.io/docs/concepts/security/overview/},
+}
+
+@WWW{hetzner-cloud,
+  title = {Hetzner Cloud},
+  url   = {https://www.hetzner.com/cloud},
+}
+
+@WWW{falco-scan,
+  author = {The Falco Authors},
+  date   = {2022-04-08},
+  title  = {The Falco Project},
+  url    = {https://falco.org/},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
