--- a/Literatur.bib
+++ b/Literatur.bib
@@ -469,6 +469,47 @@
   url    = {https://falco.org/},
 }
 
+@WWW{gh-bk-ke-bench,
+  author = {Bernd Klaus},
+  date   = {2022-04-08},
+  title  = {Github K8sEdge: KubeEdge bench},
+  url    = {https://github.com/Berndinox/K8sEdge/blob/main/Tests/it-security/kubeedge-bench.md},
+}
+
+@WWW{gh-bk-kf-bench,
+  author = {Bernd Klaus},
+  date   = {2022-04-08},
+  title  = {Github K8sEdge: KubeFed bench},
+  url    = {https://github.com/Berndinox/K8sEdge/blob/main/Tests/it-security/kubefed-bench.md},
+}
+
+@WWW{k3s-config,
+  author = {Rancher Authors},
+  date   = {2022-04-08},
+  title  = {K3s Agent Configuration Reference},
+  url    = {https://rancher.com/docs/k3s/latest/en/installation/install-options/agent-config/},
+}
+
+@WWW{owasp-k8s-cheat,
+  author = {OWASP},
+  date   = {2022-04-06},
+  title  = {Kubernetes Security Cheat Sheet},
+  url    = {https://cheatsheetseries.owasp.org/cheatsheets/Kubernetes_Security_Cheat_Sheet.html},
+}
+
+@WWW{k8s-rbac,
+  author = {The Kubernetes Authors},
+  date   = {2021-10-23},
+  title  = {Using RBAC Authorization},
+  url    = {https://kubernetes.io/docs/reference/access-authn-authz/rbac/},
+}
+
+@WWW{k3s-assesment,
+  date  = {2022-04-09},
+  title = {CIS Self Assessment Guide},
+  url   = {https://rancher.com/docs/k3s/latest/en/security/self_assessment/},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
