--- a/Literatur.bib
+++ b/Literatur.bib
@@ -510,6 +510,25 @@
   url   = {https://rancher.com/docs/k3s/latest/en/security/self_assessment/},
 }
 
+@WWW{bk-gh-k3s-test,
+  author = {Bernd Klaus},
+  date   = {2022-04-09},
+  title  = {Github K8sEdge: K3s Test},
+  url    = {https://github.com/Berndinox/K8sEdge/blob/main/Tests/it-security/k3s-test.md},
+}
+
+@WWW{flannel,
+  date  = {2022-04-09},
+  title = {Flannel},
+  url   = {https://github.com/flannel-io/flannel},
+}
+
+@WWW{k3s-network-conf,
+  author = {Rancher Docs},
+  title  = {Network Options},
+  url    = {https://rancher.com/docs/k3s/latest/en/installation/network-options/},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
